# cxsign

./: Cargo.toml  build.rs  licenserc.toml
.github/workflows/: rust.yml  rust_build.yml  slint-ui-dev.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
ui/: course-widget.slint  icon.slint  login-widget.slint  loginwidget.slint  main-widget.slint  main-window.slint
ui/component/: icon.slint  notify-bar.slint  skeleton.slint
ui/widget/: activity-widget.slint  course-widget.slint  login-widget.slint  main-widget.slint  user-widget.slint
