# Copyright (C) 2025 worksoup <https://github.com/worksoup/>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "cxsign"
version = "0.6.0"
edition = "2021"

[lib]
name = "cxsign"
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cxlib/completion-all"]
completion = ["cxlib/completion"]

[dependencies]
# tikv-jemallocator = "0.5"
clap = { version = "4.5" }
cxlib = { git = "https://github.com/worksoup/cxlib.git", branch = "explict-global-var" }
cxlib_ui_solver = { git = "https://github.com/worksoup/cxlib_ui_solver.git" }
# cxlib = { path = "../cxlib/" }
env_logger = "0.11"

[profile.release]
panic = "abort"
#codegen-units = 1
#lto = "fat"
strip = "symbols"

[build-dependencies]
sha2 = "0.10"
resvg = "0.45"
ico = "0.4"
embed-resource = "3.0"
